# mcp-app-fastmcp-example

./: .gitignore  LICENSE  README.md  mcp-app.html  package-lock.json  package.json  pyproject.toml  server.py  vite.config.ts
.claude/skills/mcp-app-python/: SKILL.md
.claude/skills/mcp-app-python/references/: frontend.md
src/: mcp-app.module.css  mcp-app.tsx
