[project]
name = "mcp-demo-counter"
version = "1.0.0"
description = "MCP Demo Counter App - Interactive counter with MCP Apps SDK"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
mcp-demo-counter = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py", "dist/**"]

[dependency-groups]
dev = []
